--- a/dfs.ipynb
+++ b/dfs.ipynb
@@ -1,15 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DFS"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ruta más profunda (DFS) de Foco Baño P1 a TV Sala: ['Foco Baño P1', 'Foco Cocina', 'Foco Sala 2', 'Bocina sala 2', 'TV Sala']\n"
+      "Ruta más profunda (DFS) de Foco Baño P1 a TV Sala: ['FocoBP1', 'FocoSala1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
      ]
     }
    ],
@@ -58,14 +65,18 @@
     "def cargar_grafo_desde_archivo(nombre_archivo):\n",
     "    grafo = Grafo()\n",
     "    with open(nombre_archivo, 'r', encoding='utf-8') as archivo:\n",
-    "        for linea in (l.strip() for l in archivo if ':' not in l and l.strip()):\n",
-    "            nodos = linea.split(',')\n",
-    "            grafo.agregar_arista(nodos[0].strip(), nodos[1].strip())\n",
+    "        for linea in (l.strip() for l in archivo if ':' in l and l.strip()):\n",
+    "            nodo, vecinos = linea.split(':')\n",
+    "            nodo = nodo.strip()\n",
+    "            vecinos = vecinos.strip().split()\n",
+    "            for vecino in vecinos:\n",
+    "                grafo.agregar_arista(nodo, vecino)\n",
     "    return grafo\n",
     "\n",
+    "\n",
     "grafo = cargar_grafo_desde_archivo('grafo.txt')\n",
-    "nodo_inicio = grafo.nodos.get('Foco Baño P1')\n",
-    "nodo_objetivo = grafo.nodos.get('TV Sala')\n",
+    "nodo_inicio = grafo.nodos.get('FocoBP1')\n",
+    "nodo_objetivo = grafo.nodos.get('TV')\n",
     "\n",
     "if nodo_inicio and nodo_objetivo:\n",
     "    ruta_dfs = grafo.dfs(nodo_inicio, nodo_objetivo)\n",
@@ -76,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ruta más corta (BFS) de Foco Baño P1 a TV Sala: ['Foco Baño P1', 'Foco Cocina', 'Foco Sala 1', 'Bocina Sala 1', 'TV Sala']\n"
+      "Ruta más corta (BFS) de FocoBP1 a Tv: ['FocoBP1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
      ]
     }
    ],
@@ -132,18 +143,22 @@
     "def cargar_grafo_desde_archivo(nombre_archivo):\n",
     "    grafo = Grafo()\n",
     "    with open(nombre_archivo, 'r', encoding='utf-8') as archivo:\n",
-    "        for linea in (l.strip() for l in archivo if ':' not in l and l.strip()):\n",
-    "            nodos = linea.split(',')\n",
-    "            grafo.agregar_arista(nodos[0].strip(), nodos[1].strip())\n",
+    "        for linea in (l.strip() for l in archivo if ':' in l and l.strip()):\n",
+    "            nodo, vecinos = linea.split(':')\n",
+    "            nodo = nodo.strip()\n",
+    "            vecinos = vecinos.strip().split()\n",
+    "            for vecino in vecinos:\n",
+    "                grafo.agregar_arista(nodo, vecino)\n",
     "    return grafo\n",
     "\n",
+    "\n",
     "grafo = cargar_grafo_desde_archivo('grafo.txt')\n",
-    "nodo_inicio = grafo.nodos.get('Foco Baño P1')\n",
-    "nodo_objetivo = grafo.nodos.get('TV Sala')\n",
+    "nodo_inicio = grafo.nodos.get('FocoBP1')\n",
+    "nodo_objetivo = grafo.nodos.get('TV')\n",
     "\n",
     "if nodo_inicio and nodo_objetivo:\n",
     "    ruta_bfs = grafo.bfs(nodo_inicio, nodo_objetivo)\n",
-    "    print(f\"Ruta más corta (BFS) de Foco Baño P1 a TV Sala: {ruta_bfs}\")\n",
+    "    print(f\"Ruta más corta (BFS) de FocoBP1 a Tv: {ruta_bfs}\")\n",
     "else:\n",
     "    print(\"Error: No se encontraron los nodos de inicio o objetivo en el grafo.\")"
    ]
@@ -157,51 +172,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ruta más corta (BFS) de FocoBP1 a TV: ['FocoBP1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
+     ]
+    }
+   ],
    "source": [
     "class Graph:\n",
     "    def __init__(self, file_path):\n",
+    "        \"\"\"\n",
+    "        Inicializa el grafo cargándolo desde un archivo.\n",
+    "        :param file_path: Ruta al archivo que contiene la lista de adyacencia.\n",
+    "        \"\"\"\n",
     "        self.adjacency_list = self.load_graph(file_path)\n",
-    "    \n",
+    "\n",
     "    def load_graph(self, file_path):\n",
+    "        \"\"\"\n",
+    "        Carga el grafo desde un archivo y lo representa como un diccionario.\n",
+    "        :param file_path: Ruta al archivo con la lista de adyacencia.\n",
+    "        :return: Diccionario que representa el grafo.\n",
+    "        \"\"\"\n",
     "        graph = {}\n",
     "        with open(file_path, 'r') as file:\n",
     "            for line in file:\n",
     "                node, neighbors = line.split(\":\")\n",
-    "                graph[int(node.strip())] = list(map(int, neighbors.split())) if neighbors.strip() else []\n",
+    "                graph[node.strip()] = [neighbor.strip() for neighbor in neighbors.split()] if neighbors.strip() else []\n",
     "        return graph\n",
-    "    \n",
-    "    def bfs(self, start_node):\n",
+    "\n",
+    "    def bfs(self, start_node, target_node):\n",
     "        \"\"\"\n",
-    "        Realiza la búsqueda en anchura (BFS) en el grafo desde el nodo inicial.\n",
-    "        :param start_node: Nodo desde donde iniciar la búsqueda.\n",
-    "        :return: Lista del recorrido BFS.\n",
+    "        Realiza la búsqueda en anchura (BFS) para encontrar la ruta más corta entre dos nodos.\n",
+    "        :param start_node: Nodo inicial.\n",
+    "        :param target_node: Nodo objetivo.\n",
+    "        :return: Lista con la ruta más corta o None si no hay conexión.\n",
     "        \"\"\"\n",
+    "        if start_node not in self.adjacency_list or target_node not in self.adjacency_list:\n",
+    "            return None\n",
+    "\n",
     "        visited = set()\n",
-    "        queue = [start_node]\n",
-    "        bfs_order = []\n",
-    "        \n",
+    "        queue = [(start_node, [start_node])]  # (nodo_actual, ruta_hasta_este_nodo)\n",
+    "\n",
     "        while queue:\n",
-    "            current_node = queue.pop(0)\n",
+    "            current_node, path = queue.pop(0)\n",
+    "\n",
+    "            if current_node == target_node:\n",
+    "                return path  # Ruta encontrada\n",
+    "\n",
     "            if current_node not in visited:\n",
     "                visited.add(current_node)\n",
-    "                bfs_order.append(current_node)\n",
-    "                # Añade a la cola los vecinos no visitados\n",
-    "                queue.extend(neighbor for neighbor in self.adjacency_list[current_node] if neighbor not in visited)\n",
-    "        \n",
-    "        return bfs_order\n",
+    "                neighbors = self.adjacency_list[current_node]\n",
+    "                for neighbor in neighbors:\n",
+    "                    if neighbor not in visited:\n",
+    "                        queue.append((neighbor, path + [neighbor]))\n",
+    "\n",
+    "        return None  # Si no se encuentra la ruta\n",
     "\n",
     "\n",
     "# Ejemplo de uso\n",
     "if __name__ == \"__main__\":\n",
-    "    file_path = \"grafo.txt\"  # Reemplaza con tu archivo de grafo\n",
-    "    \n",
-    "    # Cargar el grafo y ejecutar BFS\n",
-    "    grafo = Graph(file_path)\n",
-    "    start_node = 1  # Nodo desde donde empezar el BFS\n",
-    "    print(\"Recorrido BFS:\", grafo.bfs(start_node))\n"
+    "    # Cargar el grafo desde el archivo\n",
+    "    grafo = Graph('grafo.txt')\n",
+    "\n",
+    "    # Definir nodos de inicio y objetivo\n",
+    "    nodo_inicio = 'FocoBP1'\n",
+    "    nodo_objetivo = 'TV'\n",
+    "\n",
+    "    # Encontrar ruta BFS\n",
+    "    ruta_bfs = grafo.bfs(nodo_inicio, nodo_objetivo)\n",
+    "    if ruta_bfs:\n",
+    "        print(f\"Ruta más corta (BFS) de {nodo_inicio} a {nodo_objetivo}: {ruta_bfs}\")\n",
+    "    else:\n",
+    "        print(f\"No hay conexión entre {nodo_inicio} y {nodo_objetivo}.\")\n"
    ]
   }
  ],
