--- a/dfs.ipynb
+++ b/dfs.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ruta más profunda (DFS) de Foco Baño P1 a TV Sala: ['FocoBP1', 'FocoSala1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
+      "Ruta más profunda (DFS) de Foco Baño P1 a TV Sala: ['Alexa', 'FocoH0', 'Smartphone1', 'RouterP1', 'Laptop1', 'TV']\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "\n",
     "\n",
     "grafo = cargar_grafo_desde_archivo('grafo.txt')\n",
-    "nodo_inicio = grafo.nodos.get('FocoBP1')\n",
+    "nodo_inicio = grafo.nodos.get('Alexa')\n",
     "nodo_objetivo = grafo.nodos.get('TV')\n",
     "\n",
     "if nodo_inicio and nodo_objetivo:\n",
@@ -87,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ruta más corta (BFS) de FocoBP1 a Tv: ['FocoBP1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
+      "Ruta más corta (BFS) de FocoBP1 a Tv: ['Alexa', 'RouterP1', 'Laptop1', 'TV']\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
     "\n",
     "\n",
     "grafo = cargar_grafo_desde_archivo('grafo.txt')\n",
-    "nodo_inicio = grafo.nodos.get('FocoBP1')\n",
+    "nodo_inicio = grafo.nodos.get('Alexa')\n",
     "nodo_objetivo = grafo.nodos.get('TV')\n",
     "\n",
     "if nodo_inicio and nodo_objetivo:\n",
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ruta más corta (BFS) de FocoBP1 a TV: ['FocoBP1', 'FocoCocina', 'FocoSala2', 'RouterP1', 'Laptop1', 'TV']\n"
+      "Ruta más corta (BFS) de Alexa a TV: ['Alexa', 'RouterP1', 'Laptop1', 'TV']\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
     "    grafo = Graph('grafo.txt')\n",
     "\n",
     "    # Definir nodos de inicio y objetivo\n",
-    "    nodo_inicio = 'FocoBP1'\n",
+    "    nodo_inicio = 'Alexa'\n",
     "    nodo_objetivo = 'TV'\n",
     "\n",
     "    # Encontrar ruta BFS\n",
